Revision history for Net-STOMP-Client:

2.1	Wed Jun  5 2013
	* Now preserving $@ in object destructor.
	* Fixed Net::STOMP::Client::Auth import bug.

2.0	Fri Dec 14 2012
	* Major code refactoring, see README.2.x for more information.
	* Cleanup code to please Perl::Critic.
	* Removed support for blocking I/O, only non-blocking I/O is supported.
	* Now using the No::Worries and Params::Validate modules from CPAN.
	* Added STOMP 1.2 support.
	* Added the queue_message() and send_message() methods for convenience.
	* Added optional authentication support via Authen::Credential.
	* Promoted to 2.0 after successful testing.

1.8	Thu Sep 27 2012
	* Ignore I/O errors after we have successfully sent the DISCONNECT frame.
	* Added support for non-blocking I/O, this is now the default I/O mode.

1.7	Mon Jul  2 2012
	* Improved SSL support by handling situations where select()
	  claims that there is nothing to read although there is.

1.6	Mon Jun 25 2012
	* Net::STOMP::Client::Frame: minor encoding speed improvements.
	* Net::STOMP::Client: the disconnect() method now handles receipts.
	* Preserve $@ when calling Encode::encode() or Encode::decode().

1.5	Tue Feb 28 2012
	* Improved the documentation wrt failover support id (RT#74738).
	* Added a server() method to access the CONNECTED frame's server header.

1.4	Fri Jan 27 2012
	* Improved the documentation wrt subscription id (RT#73060).
	* Improved ActiveMQ failover URI support.

1.3	Wed Nov 23 2011
	* Fixed our use of isa() (RT#71520).
	* Added support for Messaging::Message (this module is optional).
	* Improved error handling.

1.2	Tue Sep 27 2011
	* Net::STOMP::Client::Frame: the frame parsing, decoding and encoding
	  code is now documented and can be used outside of this module.
	* Improved frame debugging to really show what has been sent/received.
	* Net::STOMP::Client::Frame: removed the debug() method.
	* Fixed typo (RT#69417).
	* Improved session id handling in cases where the session header is